--- a/prepros-6.config
+++ b/prepros-6.config
@@ -21,8 +21,8 @@
     {
       "path": "scss/styles.scss",
       "imports": [
-        "scss/partials/_setup.scss",
         "scss/partials/_variables.scss",
+        "scss/partials/_setup.scss",
         "scss/partials/_main.scss",
         "scss/partials/_questions.scss",
         "scss/partials/_submit-buttons.scss",
@@ -32,7 +32,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
@@ -73,7 +73,7 @@
     "wp-includes"
   ],
   "server": {
-    "port": 7879,
+    "port": 7880,
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
@@ -82,7 +82,7 @@
     }
   },
   "browser-sync": {
-    "enable": false,
+    "enable": true,
     "clicks": true,
     "forms": true,
     "scroll": true
